# exercise-monitoring-system-opencv

./: .gitignore  CMakeLists.txt  README.md  SETTINGS.md  analyzePose.hpp  attempt_angles.txt  back_angle_left.txt  correct_angles.txt  curl_angle_right.txt  load.cpp  main.cpp  main.py  requirements.txt  run.sh  test.py  video.cpp
controllers/: abdominal_controller.py  biceps_controller.py  elevaciones_controller.py  estocada_controller.py  jumps_controller.py  main_controller.py  plancha_controller.py  puente_controller.py  sentadilla_controller.py
detection/: movenet_thunder.py
include/: pose.hpp  poseEstimation.hpp
old/: CMakeLists.txt  load.cpp  main_window.py
ui/: main_window.ui  sentadilla_window.ui
utils/: download_vid.py
views/: abdominal_window.py  exercise_window.py  main_window.py  plancha_window.py  sentadilla_window.py  videogui_tflite.py
